# physics_lab_tech

./: .gitignore  README.md  mainScript.bat  mainScript.sh
MERRA-2 data analysis/: file_input.py  function_tester.py  grapher.py  metadata_gathering.py
amtm/: todo
amtm total power/graphers/: Power_graphing_monthly.py  Power_graphing_winter.py
amtm total power/runners/: power_spectrum_runner.py
amtm/documentation/: amtm_power_spectrum_runner_tutorial.md  amtm_total_power_tutorial.md  power_spectrum_runner_tutorial.md
amtm/graphers/: calculate_tot_powr.py  power_spectrum.py  power_spectrum_daily.py  total_power_graphing_monthly.py  total_power_graphing_winter.py  total_power_graphing_winter_1_year.py  total_power_graphing_winter_2_year.py
amtm/helpers/: calculate_tot_powr.py
amtm/runners/: amtm_power_spectrum_runner.py  amtm_total_power_runner.py  power_spectrum_runner.py
chileIntensityPlotting/algorithmValidating/: pyproject.toml  testLombScargle.py  testLombScargle1.py
chileIntensityPlotting/allTime/: all_time_grapher.py
chileIntensityPlotting/correlation/: oh_sf_alltime_monthly_correlation_test.py  pyproject.toml
chileIntensityPlotting/dataValidating/darkIntensityValidator/: CMakeLists.txt  OneDay.cpp  OneDay.hpp  main.cpp  parsing.cpp
chileIntensityPlotting/dataValidating/srMover/: main.cpp
chileIntensityPlotting/dataValidating/timeValidator/: CMakeLists.txt  strTool.hpp
chileIntensityPlotting/dataValidating/yearValidator/: CMakeLists.txt  main.cpp  strTool.cpp  strTool.hpp
chileIntensityPlotting/frequencyAnalysis/oh_alltime_daily_residual_fft/: ohDailyAvgAlltimeFFT.py  pyproject.toml
chileIntensityPlotting/frequencyAnalysis/oh_sf_alltime_daily_residual_fft/: ohsfDailyAvgAlltimeFFT.py
chileIntensityPlotting/frequencyAnalysis/oh_sf_alltime_monthly_residual/: ohsfMonthlyAvgAlltimeResidual.py
chileIntensityPlotting/frequencyAnalysis/oh_sf_alltime_monthly_residual_fft/: ohsfMonthlyAvgAlltimeFFT.py  pyproject.toml
chileIntensityPlotting/frequencyAnalysis/oh_sf_alltime_yearly_residual_fft/: ohYearlyAvgAlltimeFFT.py  pyproject.toml
chileIntensityPlotting/frequencyAnalysis/oh_sf_yearly_daily_residual_fft/: ohDailyAvgYearlyFFT.py  ohsfDailyAvgYearlyFFT.py
chileIntensityPlotting/frequencyAnalysis/oh_yearly_daily_residual_fft/: ohDailyAvgAlltimeFFT.py  ohDailyAvgYearlyFFT.py
chileIntensityPlotting/solarFlux/: CMakeLists.txt  OneDay.cpp  TestMean.cpp  fileWrite.cpp  fileWrite.hpp  grapher.py  main.cpp  mean.cpp  mean.hpp  parsing.cpp  parsing.hpp  solarGrapher.py  strTool.hpp
chileIntensityPlotting/solarFlux/sf_30_year_past_graphing/: CMakeLists.txt  OneYear.cpp  OneYear.hpp  fileWrite.cpp  main.cpp  parsing.cpp  solar30YearsPastMonthlyGrapher.py
chileIntensityPlotting/solarFlux/sf_alltime_daily/: CMakeLists.txt  SolarFluxData.cpp  SolarFluxData.hpp  fileWrite.cpp  fileWrite.hpp  main.cpp  parsing.cpp  parsing.hpp  solarDailyGrapher.py
chileIntensityPlotting/solarFlux/sf_alltime_daily_residual_fft/: pyproject.toml  solarDailyAlltimeFFT.py
chileIntensityPlotting/solarFlux/sf_alltime_monthly/: CMakeLists.txt  OneYear.cpp  OneYear.hpp  TestProgram.cpp  fileWrite.cpp  fileWrite.hpp  main.cpp  parsing.cpp  parsing.hpp  solarMonthlyGrapher.py
chileIntensityPlotting/timeValidating/: main.cpp  parsing.cpp  parsing.hpp
chileIntensityPlotting/yearly/: CMakeLists.txt  OneDay.cpp  OneDay.hpp  TestMean.cpp  fileWrite.cpp  fileWrite.hpp  grapher.py  main.cpp  mean.cpp  mean.hpp  parsing.cpp  parsing.hpp  strTool.hpp  yearGrapher.py
data analysis/MERRA-2 analysis copy/: main.py
data analysis/MERRA-2 data analysis/: grapher.py  main.py  multi_dataset_graphing.py  subfolder_generation.py
data analysis/data_info_evaluating/: arrayprocessing.py  misc.py
data analysis/homebrew origin/: grapher.py  main.py  manual.md  parser.py
data analysis/interference and wave correlation/: array_processing.py  csvhandling.py
homebrew origin/: chileTempCleanerAndGrapher.bat  chileTempCleanerAndGrapher.sh  manual.md  scriptPathsSetter.example.bat  scriptPathsSetter.example.sh
homebrew origin/java_src/: AbstractCleaner.java  CloudCleaner.java  Main.java  MiscTest.java  PreBGCleaner.java  StandardDeviationCleaner.java  StandardDeviationCleanerAll.java  StandardDeviationCleanerBGOnly.java  Write.java
homebrew origin/python_src/: grapher.py  main.py  parser.py
homebrew origin/src/: AbstractCleaner.java  Main.java  Parser.java  StandardDeviationCleaner.java
idl/: newALO_OH_AndoverMonthly.pro
multi_platform_projects/homebrew origin/: .temp_note.txt.swp  chileTempCleanerAndGrapher.sh  mainScript.bat  manual.md  monthlyCleaner.bat  monthlyCleaner.cpp
other/: check_day_for_subfolders.py  processing_filename_helper.py  rename_folders_real_quick.py
python_code/other/: downloading_merra_script.py  processed_folder_creator.py  processing_filename_helper.py  rename_folders_real_quick.py
small data analysis projects/data_info_evaluating/: csvhandling.py  main.py
small data analysis projects/interference and wave correlation/: .gitignore
util scripts/: downloading_merra_script.py  dumb_lil_thing.py  image_renamer.py  make_folders_real_quick.py  nan_checker.py  processing_filename_helper.py  srff_finder.py
(+230 files in other folders)
