[tool.poetry]
name = "oh-sf-alltime-monthly-avg-residual-fft"
version = "0.1.0"
description = ""
authors = ["Gabe Decker <42gdeckers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10"
scipy = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
